--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "imard module repository for cloning, building and saving to the CDN all modules",
   "main": "index.js",
   "scripts": {
-    "test": "test",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -33,6 +32,7 @@
   },
   "dependencies": {
     "express": "^4.14.0",
-    "nodegit": "^0.16.0"
+    "nodegit": "^0.16.0",
+    "request": "^2.75.0"
   }
 }
