--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "chai": "^3.5.0",
     "karma": "^1.3.0",
     "mocha": "^3.1.0",
-    "sinon": "^1.17.6"
+    "sinon": "^1.17.6",
+    "supertest": "^2.0.0"
   },
   "dependencies": {
     "express": "^4.14.0",
