--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chai": "^3.5.0",
     "eslint": "^3.7.1",
     "istanbul": "^0.4.5",
+    "jsdoc": "^3.4.2",
     "mocha": "^3.1.0",
     "recursive-readdir": "^2.1.0",
     "sinon": "^1.17.6",
