--- a/.eslintrc
+++ b/.eslintrc
@@ -5,18 +5,20 @@
     "es6": true
   },
   "rules": {
+    "indent": ["error", "tab"],
     "no-bitwise": ["error", { "allow": ["~"] }],
     "quote-props": ["error", "as-needed", { "keywords": true }],
     "quotes": ["error", "double", {"avoidEscape": true}],
     "no-undefined": 0,
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "object-curly-newline": ["error", { "minProperties": 2 }],
+    "no-unused-vars": ["error", { "args": "none" }],
     "no-ternary": 0,
     "no-underscore-dangle": 0,
     "linebreak-style": 0,
     "padded-blocks": 0,
     "object-shorthand": 0,
-    "no-var": 0,
+    "no-var": "error",
     "sort-vars": 0,
     "no-magic-numbers": ["error", {"ignore": [-1, 0, 1]}],
     "id-length": ["error", {"exceptions": ["$", "_", "i", "j"] }],
@@ -30,17 +32,20 @@
     "prefer-arrow-callback": 0,
     "prefer-reflect": 0,
     "prefer-template": 0,
-    "spaced-comment": ["error", "always", { "markers": ["global", "eslint"] }],
+    "spaced-comment": 0,
     "no-invalid-this": 0,
     "dot-location": 0,
     "eol-last": 0,
     "func-names": 0,
     "global-require": 0,
     "require-jsdoc": 0,
-    "valid-jsdoc": 0,
+    "valid-jsdoc": "error",
     "sort-keys": 0,
     "one-var": 0,
     "space-in-parens": 0,
-    "no-multi-spaces": 0
+    "no-multi-spaces": 0,
+    "no-tabs": 0,
+    "curly": 0,
+    "no-use-before-define": 0
   }
 }
