modified eslint configuration; status codes and content type are moved to the new file - constants.js (with Spec is added); fixed request specs code

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,28 +10,28 @@
     "no-bitwise": ["error", { "allow": ["~"] }],
     "quote-props": ["error", "as-needed", { "keywords": true }],
     "quotes": ["error", "double", {"avoidEscape": true}],
-    "no-undefined": 0,
     "no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
     "object-curly-newline": ["error", { "minProperties": 2 }],
     "no-unused-vars": ["error", { "args": "none" }],
+    "no-var": "error",
+    "no-magic-numbers": ["error", {"ignore": [-1, 0, 1]}],
+    "id-length": ["error", {"exceptions": ["$", "_", "i", "j"] }],
+    "max-len": ["error", 160, 4],
+    "max-statements": ["error", 20],
+    "semi": "error",
+    "object-curly-spacing": ["off", "never"],
+    "multiline-ternary": 0,
+    "newline-before-return": 0,
+    "newline-per-chained-call": 0,
+    "no-undefined": 0,
+    "sort-vars": 0,
+    "max-params": 0,
     "no-negated-condition": 0,
     "no-ternary": 0,
     "no-underscore-dangle": 0,
     "linebreak-style": 0,
     "padded-blocks": 0,
     "object-shorthand": 0,
-    "no-var": "error",
-    "sort-vars": 0,
-    "no-magic-numbers": ["error", {"ignore": [-1, 0, 1]}],
-    "id-length": ["error", {"exceptions": ["$", "_", "i", "j"] }],
-    "max-len": ["error", 160, 4],
-    "max-params": 0,
-    "max-statements": ["error", 20],
-    "multiline-ternary": "off",
-    "newline-before-return": "off",
-    "newline-per-chained-call": "off",
-    "object-curly-spacing": ["off", "never"],
-    "semi": "error",
     "prefer-arrow-callback": 0,
     "prefer-reflect": 0,
     "prefer-template": 0,
