modified eslint configuration; added new class - InnerResponse; modified requests' input, as well as router's; modified server's most code part; created flexible functions for starting server; added constants; added express support (with plugs for now :); refactored specs with express testing (added supertest support); and more

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,8 @@
     "max-statements": ["error", 20],
     "semi": "error",
     "object-curly-spacing": ["off", "never"],
+    "valid-jsdoc": "error",
+    "guard-for-in": 0,
     "multiline-ternary": 0,
     "newline-before-return": 0,
     "newline-per-chained-call": 0,
@@ -42,7 +44,6 @@
     "func-names": 0,
     "global-require": 0,
     "require-jsdoc": 0,
-    "valid-jsdoc": "error",
     "sort-keys": 0,
     "one-var": 0,
     "space-in-parens": 0,
