added utils .js with removing cloned and built repo folders; updated a bit eslint configuration; fixed problem with testing clone; added before() and after() in request handlers (except start); expanded .gitignore; reformatted code; added own 404; problem in testing utils occurs

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-# test cloned repo
-test_repo
+# cloned repo
+.cloned-repo
+
+# built repo
+.build-repo
+
+# dolphin folder config file
+.directory
 
 # Logs
 logs
