--- a/.eslintrc
+++ b/.eslintrc
@@ -55,6 +55,7 @@
     "no-warning-comments": 0,
     "no-inline-comments": 0,
     "no-whitespace-before-property": 0,
-    "no-empty-function": 0
+    "no-empty-function": 0,
+    "no-sync": 0
   }
 }
